--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "livechat",
   "version": "1.0.0",
-  "description": "Live chat application using nodejs",
+  "description": "Live chat application using Node.js, Express, and MongoDB",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sourav",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.17.1",
     "http": "^0.0.1-security",
-    "lorem-ipsum": "^2.0.8",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3",
-    "socket.io": "^4.7.2"
+    "mongoose": "^5.12.13",
+    "dotenv": "^10.0.0",
+    "socket.io": "^4.0.0",
+    "lorem-ipsum": "^2.0.8"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^2.0.7"
   }
 }
