--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "Sourav",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http": "^0.0.1-security",
+    "i": "^0.3.7",
+    "lorem-ipsum": "^2.0.8",
     "mongoose": "^5.12.13",
-    "dotenv": "^10.0.0",
-    "socket.io": "^4.0.0",
-    "lorem-ipsum": "^2.0.8"
+    "npm": "^10.2.5",
+    "socket.io": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
