--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.18.0",
     "http": "^0.0.1-security",
     "i": "^0.3.7",
     "lorem-ipsum": "^2.0.8",
